Fix spacing / add bg color for admin_dashboard

--- a/mockquizapp/static/css/admin_dashboard/styles.css
+++ b/mockquizapp/static/css/admin_dashboard/styles.css
@@ -1,5 +1,6 @@
-
-
+body {
+    background-color: #EFEFF0;;
+}
 
 .pop-up{
     display: flex;
