--- a/mockquizapp/static/css/student_dashboard/style.css
+++ b/mockquizapp/static/css/student_dashboard/style.css
@@ -19,7 +19,7 @@ body {
 }
 
 .wrapper:not(:last-child) { 
-    margin-bottom: 4em;
+    margin-bottom: 1.5em;
 }
 
 .wrapper h3 {
@@ -50,7 +50,7 @@ body {
     display: flex;
     justify-content: space-between;
     text-align: center;
-    margin: 2em 0;
+    margin-top: 2em;
 }
 
 .text-stats h4 {
